# multiagent-debate-simulator

./: .env.example  .gitignore  AGENTS.md  FUTURE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  deploy-frontend.yml
agentcore/: .gitignore  agentcore.json  aws-targets.example.json
app/DebateAgent/: README.md  main.py  pyproject.toml  runtime_env.py
app/DebateAgent/api/: server.py
app/DebateAgent/api/routes/: debate.py
app/DebateAgent/api/schemas/: debate.py
app/DebateAgent/api/streaming/: __init__.py  debate_stream.py  event_mapper.py  iter_debate_events.py
app/DebateAgent/debate/: __init__.py  context.py  graph.py  initial_state.py  settings.py  state.py  topic.py  wikipedia_limits.py
app/DebateAgent/debate/agents/: __init__.py  base.py  debater_green.py  debater_red.py  instances.py  summarizer.py
app/DebateAgent/debate/nodes/: __init__.py  debater.py  debater_green.py  debater_red.py  message_utils.py  summarizer.py  wikipedia_tool.py
app/DebateAgent/debate/tools/: __init__.py  wikipedia.py
app/DebateAgent/model/: load.py
app/DebateAgent/tests/: conftest.py  test_main.py  test_runtime_env.py
app/DebateAgent/tests/api/: test_debate_stream.py  test_event_mapper.py
app/DebateAgent/tests/debate/: test_agents.py  test_context.py  test_graph_routing.py  test_instances.py  test_nodes.py  test_settings.py  test_topic.py  test_wikipedia_tool.py
frontend/: package.json
frontend/src/: App.css  App.tsx  index.css
lambda/api-proxy/: auth.py  common.py  (+7 more)
scripts/: build-api-proxy.sh  deploy-frontend.sh
(+29 files in other folders)
