[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DebateAgent"
version = "0.1.0"
description = "AgentCore Runtime Application using LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "opentelemetry-instrumentation-langchain >= 0.59.0",
    "langgraph >= 1.0.2",
    "langchain >= 1.0.3",
    "bedrock-agentcore >= 1.8.0",
    "botocore[crt] >= 1.35.0",
    "langchain-aws >= 1.0.0",
    "langchain-ollama >= 0.3.0",
    "fastapi",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-dotenv",
    "wikipedia",
]

[dependency-groups]
dev = [
    "httpx",
    "pyright",
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
include = ["."]
exclude = [".venv", "**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["api", "debate", "model"]

[tool.hatch.build.targets.wheel]
packages = ["."]
